# CLISOTS

./: CLISOTS.ipynb  R05_Descriptives.ipynb  README.md  config.py  display_results.py  docker-compose.yml  painterly_rendering.py  pyproject.toml  run_object_sketching.py
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
models/: loss.py  painter_params.py
